--- a/app/common/header.html
+++ b/app/common/header.html
@@ -15,9 +15,9 @@
     }
     /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
     #main {margin-left: 120px}
-    .w3-teal, .w3-hover-teal:hover {
+    .w3-teal, .w3-hover-teal:hover, .w3-content {
         color: #fff!important;
-        background-color: #87c5c3!important;
+        background-color: #28aaa4!important;
     }
     /* Remove margins from "page content" on small screens */
     @media only screen and (max-width: 600px) {#main {margin-left: 0}}
