--- a/app/common/sidebar.html
+++ b/app/common/sidebar.html
@@ -1,28 +1,28 @@
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
     <img src="https://mindfulness.w3spaces.com/Images/mynd-thumbnail.png?bypass-cache=37554814" style="width:100%">
-    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-      <i class="fa fa-moon-o w3-xxlarge"></i>
-      <p>MYND</p>
+    <a href="crisis.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
+      <i class="fa fa-exclamation w3-xxlarge"></i>
+      <p>Crisis Help</p>
     </a>
-    <a href="#mental-illness" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-      <i class="fa fa-snowflake-o w3-xxlarge"></i>
-      <p>Mental Health Guide</p>
+    <a href="information.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
+      <i class="fa fa-cloud w3-xxlarge"></i>
+      <p>Mental Illnesses</p>
     </a>
-    <a href="#get-help" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-      <i class="fa fa-support w3-xxlarge"></i>
-      <p>Get Help</p>
+    <a href="mindfulness.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
+      <i class="fa fa-lightbulb-o w3-xxlarge"></i>
+      <p>Mindfulness</p>
     </a>
-    <a href="#experts-near-you" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-      <i class="fa fa-heart w3-xxlarge"></i>
-      <p>Experts near you</p>
+    <a href="talk.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
+      <i class="fa fa-commenting-o w3-xxlarge"></i>
+      <p>Talk With Others</p>
     </a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-      <i class="fa fa-bullhorn w3-xxlarge"></i>
-      <p>Talk to Us</p>
+    <a href="experts.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
+      <i class="fa fa-address-card-o w3-xxlarge"></i>
+      <p>Experts Near You</p>
     </a>
-    <a href="#message-us" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-      <i class="fa fa-envelope w3-xxlarge"></i>
-      <p>Message Us</p>
+    <a href="mymynd.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
+      <i class="fa fa-meh-o w3-xxlarge"></i>
+      <p>My Mynd</p>
     </a>
   </nav>
