Removed dist folder

--- a/mindfulness.html
+++ b/mindfulness.html
@@ -66,9 +66,11 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
-    <h2 class="w3-text-light-grey">{page title}</h2>
+    <h2 class="w3-text-light-grey">Mindfulness</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p></p>
+    <p>An anxious brain worries about the future or dwells on the past. And the more often you allow yourself to be anywhere, but the present, the more efficient your anxious brain will become at avoiding the present. Which means it will take an effort to change this habit.</p>
+    <p>Mindfulness approaches life differently and requires you to let go of some self-judgment. For example, you have to let go of judging your thoughts. Your thoughts are just thoughts. They add narrative to what is going on around you and are just that – stories you tell yourself. Your emotions can trigger these stories, or these stories can trigger your emotions.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/g5sXaLzAhGQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
   <!-- Footer -->
