--- a/index.html
+++ b/index.html
@@ -1,181 +1,86 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>MYND Melbourne</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-.w3-row-padding img {margin-bottom: 12px}
-/* Set the width of the sidebar to 120px */
-.w3-sidebar, w3-sidebar:hover {
-  width: 120px;
-  background: #98cdcc;
-}
-/* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
-#main {margin-left: 120px}
-.w3-teal, .w3-hover-teal:hover {
-    color: #fff!important;
-    background-color: #87c5c3!important;
-}
-/* Remove margins from "page content" on small screens */
-@media only screen and (max-width: 600px) {#main {margin-left: 0}}
-</style>
+    <title>MYND Melbourne</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+    body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+    .w3-row-padding img {margin-bottom: 12px}
+    /* Set the width of the sidebar to 120px */
+    .w3-sidebar, w3-sidebar:hover {
+      width: 120px;
+      background: #98cdcc;
+    }
+    /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
+    #main {margin-left: 120px}
+    .w3-teal, .w3-hover-teal:hover, .w3-content {
+        color: #fff!important;
+        background-color: #28aaa4!important;
+    }
+    .hyper-link {
+      color:#fff!important;
+      font-size: 20px!important;
+    }
+    /* Remove margins from "page content" on small screens */
+    @media only screen and (max-width: 600px) {#main {margin-left: 0}}
+    </style>
 </head>
 <body class="w3-teal">
 
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-  <!-- Avatar image in top left corner -->
-  <img src="https://mindfulness.w3spaces.com/Images/mynd-thumbnail.png?bypass-cache=37554814" style="width:100%">
-  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-    <i class="fa fa-moon-o w3-xxlarge"></i>
-    <p>MYND</p>
-  </a>
-  <a href="#mental-illness" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-    <i class="fa fa-snowflake-o w3-xxlarge"></i>
-    <p>Mental Health Guide</p>
-  </a>
-  <a href="#get-help" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-    <i class="fa fa-support w3-xxlarge"></i>
-    <p>Get Help</p>
-  </a>
-  <a href="#experts-near-you" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-    <i class="fa fa-heart w3-xxlarge"></i>
-    <p>Experts near you</p>
-  </a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-    <i class="fa fa-bullhorn w3-xxlarge"></i>
-    <p>Talk to Us</p>
-  </a>
-  <a href="#message-us" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-    <i class="fa fa-envelope w3-xxlarge"></i>
-    <p>Message Us</p>
-  </a>
-</nav>
-
-<!-- Navbar on small screens (Hidden on medium and large screens) -->
-<!-- <div class="w3-top w3-hide-large w3-hide-medium" id="myNavbar">
-  <div class="w3-bar w3-teal w3-opacity w3-hover-opacity-off w3-center w3-small">
-    <a href="#" class="w3-bar-item w3-button" style="width:25% !important">MYND</a>
-    <a href="#mental-illness" class="w3-bar-item w3-button" style="width:25% !important">Mental Illness</a>
-    <a href="#get-help" class="w3-bar-item w3-button" style="width:25% !important">Get Help</a>
-    <a href="#experts-near-you" class="w3-bar-item w3-button" style="width:25% !important">Experts near you</a>
-    <a href="#contact" class="w3-bar-item w3-button" style="width:25% !important">Talk to us</a>
-    <a href="#message-us" class="w3-bar-item w3-button" style="width:25% !important">Message Us</a>
-  </div>
-</div> -->
+    <!-- Avatar image in top left corner -->
+    <img src="https://mindfulness.w3spaces.com/Images/mynd-thumbnail.png?bypass-cache=37554814" style="width:100%">
+    <a href="crisis.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
+      <i class="fa fa-exclamation w3-xxlarge"></i>
+      <p>Crisis Help</p>
+    </a>
+    <a href="information.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
+      <i class="fa fa-cloud w3-xxlarge"></i>
+      <p>Mental Illnesses</p>
+    </a>
+    <a href="mindfulness.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
+      <i class="fa fa-lightbulb-o w3-xxlarge"></i>
+      <p>Mindfulness</p>
+    </a>
+    <a href="talk.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
+      <i class="fa fa-commenting-o w3-xxlarge"></i>
+      <p>Talk With Others</p>
+    </a>
+    <a href="experts.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
+      <i class="fa fa-address-card-o w3-xxlarge"></i>
+      <p>Experts Near You</p>
+    </a>
+    <a href="mymynd.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
+      <i class="fa fa-meh-o w3-xxlarge"></i>
+      <p>My Mynd</p>
+    </a>
+  </nav>
 
 <!-- Page Content -->
 <div class="w3-padding-large" id="main">
-  <!-- Header/Home -->
-  <header class="w3-container w3-padding-32 w3-center w3-teal" id="home">
-    <!-- <h1 class="w3-jumbo"><span class="w3-hide-small"></span> MYND</h1> -->
-    <img src="https://mindfulness.w3spaces.com/Images/mynd-logo.png?bypass-cache=35594428" alt="boy" class="w3-image" width="992" height="1108">
-  </header>
-
-  <!-- Mental Illness Section -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="mental-illness">
-    <h2 class="w3-text-light-grey">Mental Health Guide</h2>
+  
+  <!-- content -->
+  <div class="w3-content w3-justify w3-text-grey w3-padding-64">
+    <h2 class="w3-text-light-grey">{page title}</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>Some text about the mental illness. Some text about the seriousness of the diseases associated with mental illnesses. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
-    <h3 class="w3-padding-16 w3-text-light-grey" id="get-help">Get Help</h3>
-    <p class="w3-wide">Crisis Help</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:95%"></div>
-    </div>
-    <p class="w3-wide">Mindfulness</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:85%"></div>
-    </div>
-    <p class="w3-wide">Talk to Us</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:80%"></div>
-    </div>
-    <p class="w3-wide">Experts near you</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:80%"></div>
-    </div><br>
-
-    <h3 class="w3-padding-16 w3-text-light-grey" id="experts-near-you">Experts near you</h3>
-    <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">11+</span><br>
-        Partners
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">55+</span><br>
-        Helped
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">89+</span><br>
-        Happy Clients
-      </div>
-      <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">150+</span><br>
-        Meetings
-      </div>
-    </div>
-
-    <button class="w3-button w3-light-grey w3-padding-large w3-section">
-      <i class="fa fa-download"></i> Download Brochure
-    </button>
-
-    <!-- Testimonials -->
-    <h3 class="w3-padding-24 w3-text-light-grey">My Reputation</h3>
-    <img src="https://mindfulness.w3spaces.com/Images/Screen_Shot_2022-06-02_at_11.04.46_am.png?bypass-cache=31913026" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-margin-right">AJ</span> CFO at MYND.</p>
-    <p>AJ saved us from a disaster.</p><br>
-
-    <img src="https://mindfulness.w3spaces.com/Images/Screen_Shot_2022-06-02_at_11.04.46_am.png?bypass-cache=31913026" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:80px">
-    <p><span class="w3-large w3-margin-right">AJ's Friend</span> CEO at MYND.</p>
-    <p>No one is better than AJ's Friend</p>
-  <!-- End About Section -->
-  </div>
-
-  <!-- Contact Section -->
-  <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
-    <h2 class="w3-text-light-grey">Talk to Us</h2>
-    <hr style="width:200px" class="w3-opacity">
-
-    <div class="w3-section">
-      <p><i class="fa fa-map-marker fa-fw w3-text-white w3-xxlarge w3-margin-right"></i>Melbourne, Australia</p>
-      <p><i class="fa fa-phone fa-fw w3-text-white w3-xxlarge w3-margin-right"></i> Phone: 1300 123 456</p>
-      <p><i class="fa fa-envelope fa-fw w3-text-white w3-xxlarge w3-margin-right"> </i> Email: aj@mindfulness.com</p>
-    </div><br>
-
-    <h2 class="w3-text-light-grey" id="message-us">Message Us</h2>
-    <hr style="width:200px" class="w3-opacity">
-    <p>Let's get in touch. Send me a message:</p>
-    <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-padding-16" type="text" placeholder="Message" required name="Message"></p>
-      <p>
-        <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </p>
-    </form>
-  <!-- End Contact Section -->
+    <p></p>
   </div>
 
   <!-- Footer -->
+  <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <h2 class="w3-text-light-grey">Social Media</h2>
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <!-- End footer -->
-  </footer>
+      <h2 class="w3-text-light-grey">Social Media</h2>
+      <i class="fa fa-facebook-official w3-hover-opacity"></i>
+      <i class="fa fa-instagram w3-hover-opacity"></i>
+      <i class="fa fa-twitter w3-hover-opacity"></i>
+      <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <!-- End footer -->
+    </footer>
 
 <!-- END PAGE CONTENT -->
 </div>
