--- a/app/common/sidebar.html
+++ b/app/common/sidebar.html
@@ -1,6 +1,6 @@
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
-    <img src="https://mindfulness.w3spaces.com/Images/mynd-thumbnail.png?bypass-cache=37554814" style="width:100%">
+    <img src="../images/mynd-thumbnail.png" style="width:100%">
     <a href="crisis.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
       <i class="fa fa-exclamation w3-xxlarge"></i>
       <p>Crisis Help</p>
