--- a/app/mymynd.html
+++ b/app/mymynd.html
@@ -11,7 +11,7 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
-      <img src="../images/mynd-logo.png" alt="boy" class="w3-image" width="992" height="1108">
+      <img src="images/mynd-logo.png" alt="boy" class="w3-image" width="992" height="1108">
     <div class="w3-content w3-justify w3-text-grey"><br>
         <p><a href="" class="hyper-link">Journal</a></p>
         <p><a href="" class="hyper-link">My Mental Health Plan</a></p>
