--- a/depression.html
+++ b/depression.html
@@ -21,6 +21,10 @@
         color: #fff!important;
         background-color: #28aaa4!important;
     }
+    .hyper-link {
+      color:#fff!important;
+      font-size: 20px!important;
+    }
     /* Remove margins from "page content" on small screens */
     @media only screen and (max-width: 600px) {#main {margin-left: 0}}
     </style>
@@ -31,7 +35,9 @@
     <!-- Icon Bar (Sidebar - hidden on small screens) -->
     <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
         <!-- Avatar image in top left corner -->
-        <img src="https://mindfulness.w3spaces.com/Images/mynd-thumbnail.png?bypass-cache=37554814" style="width:100%">
+        <a href="index.html">
+          <img src="images/mynd-thumbnail.png" style="width:100%">
+        </a>
         <a href="crisis.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
           <i class="fa fa-exclamation w3-xxlarge"></i>
           <p>Crisis Help</p>
