--- a/information.html
+++ b/information.html
@@ -34,7 +34,9 @@
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
-    <img src="../images/mynd-thumbnail.png" style="width:100%">
+    <a href="index.html">
+      <img src="images/mynd-thumbnail.png" style="width:100%">
+    </a>
     <a href="crisis.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
       <i class="fa fa-exclamation w3-xxlarge"></i>
       <p>Crisis Help</p>
