--- a/mymynd.html
+++ b/mymynd.html
@@ -34,7 +34,9 @@
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
-    <img src="../images/mynd-thumbnail.png" style="width:100%">
+    <a href="index.html">
+      <img src="images/mynd-thumbnail.png" style="width:100%">
+    </a>
     <a href="crisis.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
       <i class="fa fa-exclamation w3-xxlarge"></i>
       <p>Crisis Help</p>
@@ -66,9 +68,12 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
-    <h2 class="w3-text-light-grey">{page title}</h2>
-    <hr style="width:200px" class="w3-opacity">
-    <p></p>
+      <img src="images/mynd-logo.png" alt="boy" class="w3-image" width="992" height="1108">
+    <div class="w3-content w3-justify w3-text-grey"><br>
+        <p><a href="" class="hyper-link">Journal</a></p>
+        <p><a href="" class="hyper-link">My Mental Health Plan</a></p>
+        <p><a href="" class="hyper-link">Saved Content</a></p>
+    </div>
   </div>
 
   <!-- Footer -->
