--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
-    <h2 class="w3-text-light-grey">{page title}</h2>
-    <hr style="width:200px" class="w3-opacity">
-    <p></p>
+    <h2 class="w3-text-light-grey">Menu Page TBD</h2>
   </div>
 
   <!-- Footer -->
