--- a/app/talk.html
+++ b/app/talk.html
@@ -11,9 +11,7 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
-    <h2 class="w3-text-light-grey">Mental Illnesses Information Page TBD</h2>
-    <hr style="width:200px" class="w3-opacity">
-    <p></p>
+    <h2 class="w3-text-light-grey">Talk With Others Page TBD</h2>
   </div>
 
   <!-- Footer -->
