--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
-    <a href="index.html">
+    <a href="information.html">
       <img src="images/mynd-thumbnail.png" style="width:100%">
     </a>
     <a href="crisis.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
@@ -43,7 +43,7 @@
     </a>
     <a href="information.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
       <i class="fa fa-cloud w3-xxlarge"></i>
-      <p>Mental Illnesses</p>
+      <p>Mental Health Guide</p>
     </a>
     <a href="mindfulness.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
       <i class="fa fa-lightbulb-o w3-xxlarge"></i>
