--- a/app/depression.html
+++ b/app/depression.html
@@ -9,6 +9,7 @@
 
     <!-- Page Content -->
     <div class="w3-padding-large" id="main">
+        <a href="javascript:history.back()">< Back</a>
 
         <!-- content -->
         <div class="w3-content w3-justify w3-text-grey w3-padding-64">
