--- a/mindfulness.html
+++ b/mindfulness.html
@@ -77,11 +77,17 @@
 
   <!-- Footer -->
   <!-- Footer -->
-  <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-      <h4 class="w3-text-light-grey">Social Media</h4>
-      <i class="fa fa-facebook-official w3-hover-opacity"></i>
-      <i class="fa fa-instagram w3-hover-opacity"></i>
-      <i class="fa fa-twitter w3-hover-opacity"></i>
+  <footer class="w3-content w3-padding-64 w3-text-grey w3-small">
+    <table width="100%">
+      <tr>
+        <td align="left">
+          Copyright &copy; 2022 Mynd Ltd
+        </td>
+        <td align="right">
+          Contact Us | Terms of use | Privacy Policy
+        </td>
+      </tr>
+    </table>
     <!-- End footer -->
     </footer>
 
