--- a/mindfulness.html
+++ b/mindfulness.html
@@ -84,7 +84,7 @@
           Copyright &copy; 2022 Mynd Ltd
         </td>
         <td align="right">
-          Contact Us | Terms of use | Privacy Policy
+          Contact Us | Terms of use | Privacy policy
         </td>
       </tr>
     </table>
