--- a/app/common/footer.html
+++ b/app/common/footer.html
@@ -6,7 +6,7 @@
         Copyright &copy; 2022 Mynd Ltd
       </td>
       <td align="right">
-        Contact Us | Terms of use | Privacy policy
+        Contact us | Terms of use | Privacy policy
       </td>
     </tr>
   </table>
