--- a/app/index.html
+++ b/app/index.html
@@ -11,14 +11,61 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
-    <h2 class="w3-text-light-grey">Menu Page TBD</h2>
+    <table width="100%">
+      <tr>
+        <td width="50%">
+          <div class="w3-half">
+            <a href="information.html">
+              <div class="w3-button w3-light-blue w3-ripple" style="margin:0;padding:0">
+                <img src="images/anxiety.jpeg" style="width:100%">
+                <p class="w3-text-white">Mental Health Guide</p>
+              </div>
+            </a>
+          </div>
+        </td>
+        <td width="50%">
+          <div class="w3-half">
+            <a href="mindfulness.html">
+              <div class="w3-button w3-blue w3-ripple" style="margin:0;padding:0">
+                <img src="images/mindfulness.png" style="width:100%">
+                <p class="w3-text-white">Mindfulness</p>
+              </div>
+            </a>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+
+        </td>
+        <td>
+          
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="w3-half">
+            <a href="talk.html">
+              <div class="w3-button w3-green w3-ripple" style="margin:0;padding:0">
+                <img src="images/talk.png" style="width:100%">
+                <p class="w3-text-white">Talk With Others</p>
+              </div>
+            </a>
+          </div>
+        </td>
+        <td>
+          <div class="w3-half">
+            <a href="experts.html">
+              <div class="w3-button w3-dark-grey w3-ripple" style="margin:0;padding:0">
+                <img src="images/experts.png" style="width:100%">
+                <p class="w3-text-white">Experts Near You</p>
+              </div>
+            </a>
+          </div>
+        </td>
+      </tr>
+    </table>
   </div>
-
-  <!-- Footer -->
-  <!--(bake common/footer.html)-->
-
-<!-- END PAGE CONTENT -->
-</div>
 
 </body>
 </html>
