--- a/information.html
+++ b/information.html
@@ -34,7 +34,7 @@
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
-    <a href="information.html">
+    <a href="index.html">
       <img src="images/mynd-thumbnail.png" style="width:100%">
     </a>
     <a href="crisis.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
@@ -68,9 +68,37 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
-    <h2 class="w3-text-light-grey">Mental Illnesses Information Page TBD</h2>
-    <hr style="width:200px" class="w3-opacity">
-    <p></p>
+    <h2 class="w3-text-light-grey">Mental Illnesses Information</h2>
+    <table width="100%">
+      <tr>
+        <td width="50%">
+          <div class="w3-half">
+            <a href="depression.html">
+              <div class="w3-button w3-white w3-ripple" style="margin:0;padding:0">
+                <img src="images/anxiety.jpeg" style="width:100%">
+                <p>Depression</p>
+              </div>
+            </a>
+          </div>
+        </td>
+        <td width="50%">
+          <div class="w3-half">
+            <div class="w3-button w3-white w3-ripple" style="margin:0;padding:0">
+              <img src="images/anxiety.jpeg" style="width:100%">
+              <p>Anxiety</p>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          ADHD
+        </td>
+        <td>
+          Eating Disorders
+        </td>
+      </tr>
+    </table>
   </div>
 
   <!-- Footer -->
@@ -82,7 +110,7 @@
           Copyright &copy; 2022 Mynd Ltd
         </td>
         <td align="right">
-          Contact Us | Terms of use | Privacy policy
+          Contact us | Terms of use | Privacy policy
         </td>
       </tr>
     </table>
