--- a/talk.html
+++ b/talk.html
@@ -34,7 +34,7 @@
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
-    <a href="information.html">
+    <a href="index.html">
       <img src="images/mynd-thumbnail.png" style="width:100%">
     </a>
     <a href="crisis.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
@@ -122,7 +122,7 @@
           Copyright &copy; 2022 Mynd Ltd
         </td>
         <td align="right">
-          Contact Us | Terms of use | Privacy policy
+          Contact us | Terms of use | Privacy policy
         </td>
       </tr>
     </table>
