--- a/app/common/sidebar.html
+++ b/app/common/sidebar.html
@@ -1,6 +1,6 @@
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
-    <a href="information.html">
+    <a href="index.html">
       <img src="images/mynd-thumbnail.png" style="width:100%">
     </a>
     <a href="crisis.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
