--- a/app/information.html
+++ b/app/information.html
@@ -11,9 +11,37 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
-    <h2 class="w3-text-light-grey">Mental Illnesses Information Page TBD</h2>
-    <hr style="width:200px" class="w3-opacity">
-    <p></p>
+    <h2 class="w3-text-light-grey">Mental Illnesses Information</h2>
+    <table width="100%">
+      <tr>
+        <td width="50%">
+          <div class="w3-half">
+            <a href="depression.html">
+              <div class="w3-button w3-white w3-ripple" style="margin:0;padding:0">
+                <img src="images/anxiety.jpeg" style="width:100%">
+                <p>Depression</p>
+              </div>
+            </a>
+          </div>
+        </td>
+        <td width="50%">
+          <div class="w3-half">
+            <div class="w3-button w3-white w3-ripple" style="margin:0;padding:0">
+              <img src="images/anxiety.jpeg" style="width:100%">
+              <p>Anxiety</p>
+            </div>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          ADHD
+        </td>
+        <td>
+          Eating Disorders
+        </td>
+      </tr>
+    </table>
   </div>
 
   <!-- Footer -->
