--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
-    <a href="information.html">
+    <a href="index.html">
       <img src="images/mynd-thumbnail.png" style="width:100%">
     </a>
     <a href="crisis.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
@@ -68,27 +68,61 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
-    <h2 class="w3-text-light-grey">Menu Page TBD</h2>
-  </div>
-
-  <!-- Footer -->
-  <!-- Footer -->
-  <footer class="w3-content w3-padding-64 w3-text-grey w3-small">
     <table width="100%">
       <tr>
-        <td align="left">
-          Copyright &copy; 2022 Mynd Ltd
+        <td width="50%">
+          <div class="w3-half">
+            <a href="information.html">
+              <div class="w3-button w3-light-blue w3-ripple" style="margin:0;padding:0">
+                <img src="images/anxiety.jpeg" style="width:100%">
+                <p class="w3-text-white">Mental Health Guide</p>
+              </div>
+            </a>
+          </div>
         </td>
-        <td align="right">
-          Contact Us | Terms of use | Privacy policy
+        <td width="50%">
+          <div class="w3-half">
+            <a href="mindfulness.html">
+              <div class="w3-button w3-blue w3-ripple" style="margin:0;padding:0">
+                <img src="images/mindfulness.png" style="width:100%">
+                <p class="w3-text-white">Mindfulness</p>
+              </div>
+            </a>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+
+        </td>
+        <td>
+          
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <div class="w3-half">
+            <a href="talk.html">
+              <div class="w3-button w3-green w3-ripple" style="margin:0;padding:0">
+                <img src="images/talk.png" style="width:100%">
+                <p class="w3-text-white">Talk With Others</p>
+              </div>
+            </a>
+          </div>
+        </td>
+        <td>
+          <div class="w3-half">
+            <a href="experts.html">
+              <div class="w3-button w3-dark-grey w3-ripple" style="margin:0;padding:0">
+                <img src="images/experts.png" style="width:100%">
+                <p class="w3-text-white">Experts Near You</p>
+              </div>
+            </a>
+          </div>
         </td>
       </tr>
     </table>
-    <!-- End footer -->
-    </footer>
-
-<!-- END PAGE CONTENT -->
-</div>
+  </div>
 
 </body>
 </html>
