--- a/mymynd.html
+++ b/mymynd.html
@@ -35,7 +35,7 @@
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
     <!-- Avatar image in top left corner -->
     <a href="index.html">
-      <img src="images/mynd-thumbnail.png" style="width:100%">
+      <img src="images/mynd-final-logo.png" style="width:100%">
     </a>
     <a href="crisis.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
       <i class="fa fa-exclamation w3-xxlarge"></i>
@@ -68,7 +68,7 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
-      <img src="images/mynd-logo.png" alt="boy" class="w3-image" width="992" height="1108">
+      <img src="images/mynd-final-logo.png" alt="boy" class="w3-image" width="992" height="1108">
     <div class="w3-content w3-justify w3-text-grey"><br>
         <p><a href="" class="hyper-link">Journal</a></p>
         <p><a href="" class="hyper-link">My Mental Health Plan</a></p>
