Add text and images for crisis help page

--- a/articles.html
+++ b/articles.html
@@ -25,6 +25,10 @@
       color:#fff!important;
       font-size: 20px!important;
     }
+    .center-image {
+      display: block;
+      margin: auto;
+    }
     /* Remove margins from "page content" on small screens */
     @media only screen and (max-width: 600px) {#main {margin-left: 0}}
     </style>
