--- a/crisis.html
+++ b/crisis.html
@@ -25,6 +25,10 @@
       color:#fff!important;
       font-size: 20px!important;
     }
+    .center-image {
+      display: block;
+      margin: auto;
+    }
     /* Remove margins from "page content" on small screens */
     @media only screen and (max-width: 600px) {#main {margin-left: 0}}
     </style>
@@ -68,7 +72,10 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
-    <h2 class="w3-text-light-grey">Crisis Help Page TBD</h2>
+    <h2 class="w3-text-light-grey w3-center">Call Kids Helpline” 1800 55 1800</h2><br>
+    <img src="images/kids-helpline.png" alt="boy" class="w3-image w3-center center-image" width="50%"><br>
+    <h2 class="w3-text-light-grey w3-center">In an emergency, call 000</h2><br>
+    <img src="images/emergency-000.png" alt="boy" class="w3-image w3-center center-image" width="50%">
   </div>
 
   <!-- Footer -->
