--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
         <td width="50%">
           <div class="w3-half">
             <a href="information.html">
-              <div class="w3-button w3-light-blue w3-ripple" style="margin:0;padding:0">
+              <div class="w3-button w3-light-blue w3-ripple w3-hover-blue" style="margin:0;padding:0">
                 <img src="images/anxiety.jpeg" style="width:100%">
                 <p class="w3-text-white">Mental Health Guide</p>
               </div>
@@ -26,7 +26,7 @@
         <td width="50%">
           <div class="w3-half">
             <a href="mindfulness.html">
-              <div class="w3-button w3-blue w3-ripple" style="margin:0;padding:0">
+              <div class="w3-button w3-blue w3-ripple w3-hover-light-blue" style="margin:0;padding:0; padding-bottom: 24px;">
                 <img src="images/mindfulness.png" style="width:100%">
                 <p class="w3-text-white">Mindfulness</p>
               </div>
@@ -46,7 +46,7 @@
         <td>
           <div class="w3-half">
             <a href="talk.html">
-              <div class="w3-button w3-green w3-ripple" style="margin:0;padding:0">
+              <div class="w3-button w3-green w3-ripple w3-hover-light-green" style="margin:0;padding:0">
                 <img src="images/talk.png" style="width:100%">
                 <p class="w3-text-white">Talk With Others</p>
               </div>
@@ -56,7 +56,7 @@
         <td>
           <div class="w3-half">
             <a href="experts.html">
-              <div class="w3-button w3-dark-grey w3-ripple" style="margin:0;padding:0">
+              <div class="w3-button w3-dark-grey w3-ripple w3-hover-grey" style="margin:0;padding:0">
                 <img src="images/experts.png" style="width:100%">
                 <p class="w3-text-white">Experts Near You</p>
               </div>
