--- a/information.html
+++ b/information.html
@@ -69,36 +69,29 @@
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
     <h2 class="w3-text-light-grey">Mental Illnesses Information</h2>
-    <table width="100%">
-      <tr>
-        <td width="50%">
-          <div class="w3-half">
-            <a href="depression.html">
-              <div class="w3-button w3-white w3-ripple" style="margin:0;padding:0">
-                <img src="images/anxiety.jpeg" style="width:100%">
-                <p>Depression</p>
-              </div>
-            </a>
-          </div>
-        </td>
-        <td width="50%">
-          <div class="w3-half">
-            <div class="w3-button w3-white w3-ripple" style="margin:0;padding:0">
-              <img src="images/anxiety.jpeg" style="width:100%">
-              <p>Anxiety</p>
-            </div>
-          </div>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          ADHD
-        </td>
-        <td>
-          Eating Disorders
-        </td>
-      </tr>
-    </table>
+    <div class="w3-row">
+      <div class="w3-col s12 m4 l6 w3-padding-16">
+        <a href="depression.html" class="w3-grey w3-bar-item w3-button w3-round w3-xlarge w3-text-white w3-padding-32" style="width: 250px">
+          Depression
+        </a>
+      </div>
+      <div class="w3-col s12 m4 l6 w3-padding-16">
+        <a href="#" class="w3-grey w3-bar-item w3-button w3-round w3-xlarge w3-text-white w3-padding-32" style="width: 250px">
+          Anxiety
+        </a>
+      </div>
+    </div>
+    <div class="w3-row">
+        <div class="w3-col s12 m4 l6 w3-padding-16">
+          <a href="#" class="w3-grey w3-bar-item w3-button w3-round w3-xlarge w3-text-white w3-padding-32" style="width: 250px">
+            ADHD
+          </a>
+        </div>
+        <div class="w3-col s12 m4 l6 w3-padding-16">
+          <a href="#" class="w3-grey w3-bar-item w3-button w3-round w3-xlarge w3-text-white w3-padding-32" style="width: 250px">
+            Eating Disorders
+          </a>
+        </div>
   </div>
 
   <!-- Footer -->
