--- a/app/index.html
+++ b/app/index.html
@@ -11,60 +11,43 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
-    <table width="100%">
-      <tr>
-        <td width="50%">
-          <div class="w3-half">
+    <div class="w3-row">
+      <div class="w3-col s12 m4 l6 w3-padding-16">
             <a href="information.html">
               <div class="w3-button w3-light-blue w3-ripple w3-hover-blue" style="margin:0;padding:0">
-                <img src="images/anxiety.jpeg" style="width:100%">
+                <img src="images/guide2.png" style="width:100%">
                 <p class="w3-text-white">Mental Health Guide</p>
               </div>
             </a>
+      </div>
+      <div class="w3-col s12 m4 l6 w3-padding-16">
+        <a href="mindfulness.html">
+          <div class="w3-button w3-blue w3-ripple w3-hover-light-blue" style="margin:0;padding:0;">
+            <img src="images/brain.png" style="width:100%">
+            <p class="w3-text-white">Mindfulness</p>
           </div>
-        </td>
-        <td width="50%">
-          <div class="w3-half">
-            <a href="mindfulness.html">
-              <div class="w3-button w3-blue w3-ripple w3-hover-light-blue" style="margin:0;padding:0; padding-bottom: 24px;">
-                <img src="images/mindfulness.png" style="width:100%">
-                <p class="w3-text-white">Mindfulness</p>
-              </div>
-            </a>
+        </a>
+      </div>
+    </div>
+    <div class="w3-row">
+      <div class="w3-col s12 m4 l6 w3-padding-16">
+        <a href="talk.html">
+          <div class="w3-button w3-green w3-ripple w3-hover-light-green" style="margin:0;padding:0">
+            <img src="images/talk.png" style="width:100%">
+            <p class="w3-text-white">Talk With Others</p>
           </div>
-        </td>
-      </tr>
-      <tr>
-        <td>
+        </a>
+      </div>
+      <div class="w3-col s12 m4 l6 w3-padding-16">
+        <a href="experts.html">
+          <div class="w3-button w3-dark-grey w3-ripple w3-hover-grey" style="margin:0;padding:0">
+            <img src="images/experts.png" style="width:100%">
+            <p class="w3-text-white">Experts Near You</p>
+          </div>
+        </a>
+      </div>
+    </div>
 
-        </td>
-        <td>
-          
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <div class="w3-half">
-            <a href="talk.html">
-              <div class="w3-button w3-green w3-ripple w3-hover-light-green" style="margin:0;padding:0">
-                <img src="images/talk.png" style="width:100%">
-                <p class="w3-text-white">Talk With Others</p>
-              </div>
-            </a>
-          </div>
-        </td>
-        <td>
-          <div class="w3-half">
-            <a href="experts.html">
-              <div class="w3-button w3-dark-grey w3-ripple w3-hover-grey" style="margin:0;padding:0">
-                <img src="images/experts.png" style="width:100%">
-                <p class="w3-text-white">Experts Near You</p>
-              </div>
-            </a>
-          </div>
-        </td>
-      </tr>
-    </table>
   </div>
 
 </body>
