--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="w3-row">
       <div class="w3-col s12 m4 l6 w3-padding-16">
             <a href="information.html">
-              <div class="w3-button w3-light-blue w3-ripple w3-hover-blue" style="margin:0;padding:0">
+              <div class="w3-button w3-blue w3-ripple w3-hover-light-blue" style="margin:0;padding:0">
                 <img src="images/guide2.png" style="width:100%">
                 <p class="w3-text-white">Mental Health Guide</p>
               </div>
@@ -87,7 +87,7 @@
       </div>
       <div class="w3-col s12 m4 l6 w3-padding-16">
         <a href="mindfulness.html">
-          <div class="w3-button w3-blue w3-ripple w3-hover-light-blue" style="margin:0;padding:0;">
+          <div class="w3-button w3-light-blue w3-ripple w3-hover-blue w3-hover-grey" style="margin:0;padding:0;">
             <img src="images/brain.png" style="width:100%">
             <p class="w3-text-white">Mindfulness</p>
           </div>
