--- a/app/common/footer.html
+++ b/app/common/footer.html
@@ -1,14 +1,12 @@
 <!-- Footer -->
 <footer class="w3-content w3-padding-64 w3-text-grey w3-small">
-  <table width="100%">
-    <tr>
-      <td align="left">
+  <div class="w3-row">
+    <div class="w3-col s12 m6 l6 w3-left-align">
         Copyright &copy; 2022 Mynd Ltd
-      </td>
-      <td align="right">
+      </div>
+      <div class="w3-col s12 m6 l6 w3-right-align">
         Contact us | Terms of use | Privacy policy
-      </td>
-    </tr>
-  </table>
+      </div>
+  </div>
   <!-- End footer -->
   </footer>
