--- a/app/common/header.html
+++ b/app/common/header.html
@@ -27,6 +27,11 @@
       display: block;
       margin: auto;
     }
+    /* @media only screen and (max-width: 600px) {
+        .footer_col_2 {
+            text-align: left;
+        }
+    } */
     /* Remove margins from "page content" on small screens */
     @media only screen and (max-width: 600px) {#main {margin-left: 0}}
     </style>
