--- a/information.html
+++ b/information.html
@@ -29,6 +29,11 @@
       display: block;
       margin: auto;
     }
+    /* @media only screen and (max-width: 600px) {
+        .footer_col_2 {
+            text-align: left;
+        }
+    } */
     /* Remove margins from "page content" on small screens */
     @media only screen and (max-width: 600px) {#main {margin-left: 0}}
     </style>
@@ -74,25 +79,25 @@
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
     <h2 class="w3-text-light-grey">Mental Illnesses Information</h2>
     <div class="w3-row">
-      <div class="w3-col s12 m4 l6 w3-padding-16">
-        <a href="depression.html" class="w3-grey w3-bar-item w3-button w3-round w3-xlarge w3-text-white w3-padding-32" style="width: 250px">
+      <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin">
+        <a href="depression.html" class="w3-bar-item w3-button w3-xlarge w3-text-white w3-padding-32">
           Depression
         </a>
       </div>
-      <div class="w3-col s12 m4 l6 w3-padding-16">
-        <a href="#" class="w3-grey w3-bar-item w3-button w3-round w3-xlarge w3-text-white w3-padding-32" style="width: 250px">
+      <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin">
+        <a href="#" class="w3-bar-item w3-button w3-xlarge w3-text-white w3-padding-32">
           Anxiety
         </a>
       </div>
     </div>
     <div class="w3-row">
-        <div class="w3-col s12 m4 l6 w3-padding-16">
-          <a href="#" class="w3-grey w3-bar-item w3-button w3-round w3-xlarge w3-text-white w3-padding-32" style="width: 250px">
+        <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin">
+          <a href="#" class="w3-bar-item w3-button w3-xlarge w3-text-white w3-padding-32">
             ADHD
           </a>
         </div>
-        <div class="w3-col s12 m4 l6 w3-padding-16">
-          <a href="#" class="w3-grey w3-bar-item w3-button w3-round w3-xlarge w3-text-white w3-padding-32" style="width: 250px">
+        <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin">
+          <a href="#" class="w3-bar-item w3-button w3-xlarge w3-text-white w3-padding-32">
             Eating Disorders
           </a>
         </div>
@@ -101,16 +106,14 @@
   <!-- Footer -->
   <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-small">
-    <table width="100%">
-      <tr>
-        <td align="left">
+    <div class="w3-row">
+      <div class="w3-col s12 m6 l6 w3-left-align">
           Copyright &copy; 2022 Mynd Ltd
-        </td>
-        <td align="right">
+        </div>
+        <div class="w3-col s12 m6 l6 w3-right-align">
           Contact us | Terms of use | Privacy policy
-        </td>
-      </tr>
-    </table>
+        </div>
+    </div>
     <!-- End footer -->
     </footer>
 
