--- a/mindfulness.html
+++ b/mindfulness.html
@@ -29,6 +29,11 @@
       display: block;
       margin: auto;
     }
+    /* @media only screen and (max-width: 600px) {
+        .footer_col_2 {
+            text-align: left;
+        }
+    } */
     /* Remove margins from "page content" on small screens */
     @media only screen and (max-width: 600px) {#main {margin-left: 0}}
     </style>
@@ -82,16 +87,14 @@
   <!-- Footer -->
   <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-small">
-    <table width="100%">
-      <tr>
-        <td align="left">
+    <div class="w3-row">
+      <div class="w3-col s12 m6 l6 w3-left-align">
           Copyright &copy; 2022 Mynd Ltd
-        </td>
-        <td align="right">
+        </div>
+        <div class="w3-col s12 m6 l6 w3-right-align">
           Contact us | Terms of use | Privacy policy
-        </td>
-      </tr>
-    </table>
+        </div>
+    </div>
     <!-- End footer -->
     </footer>
 
