--- a/mindfulness.html
+++ b/mindfulness.html
@@ -91,7 +91,7 @@
       <div class="w3-col s12 m6 l6 w3-left-align">
           Copyright &copy; 2022 Mynd Ltd
         </div>
-        <div class="w3-col s12 m6 l6 w3-right-align">
+        <div class="w3-col s12 m6 l6">
           Contact us | Terms of use | Privacy policy
         </div>
     </div>
