--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
+    <h2 class="w3-text-light-grey"></h2>
     <div class="w3-row">
       <div class="w3-col s12 m4 l6 w3-padding-16">
             <a href="information.html">
