--- a/information.html
+++ b/information.html
@@ -79,24 +79,24 @@
   <div class="w3-content w3-justify w3-text-grey w3-padding-64">
     <h2 class="w3-text-light-grey">Mental Health Guide</h2>
     <div class="w3-row">
-      <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin">
+      <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin-bottom w3-margin-right">
         <a href="depression.html" class="w3-bar-item w3-button w3-large w3-text-white w3-padding-32">
           Depression
         </a>
       </div>
-      <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin">
+      <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin-bottom w3-margin-right">
         <a href="#" class="w3-bar-item w3-button w3-large w3-text-white w3-padding-32">
           Anxiety
         </a>
       </div>
     </div>
     <div class="w3-row">
-        <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin">
+        <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin-bottom w3-margin-right">
           <a href="#" class="w3-bar-item w3-button w3-large w3-text-white w3-padding-32">
             ADHD
           </a>
         </div>
-        <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin">
+        <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin-bottom w3-margin-right">
           <a href="#" class="w3-bar-item w3-button w3-large w3-text-white w3-padding-32">
             Eating Disorders
           </a>
