--- a/app/depression.html
+++ b/app/depression.html
@@ -12,7 +12,7 @@
         <a href="javascript:history.back()">< Back</a>
 
         <!-- content -->
-        <div class="w3-content w3-justify w3-text-grey w3-padding-64">
+        <div class="w3-content w3-justify w3-text-grey">
             <h2 class="w3-text-light-grey">Depression</h2>
             <hr style="width:200px" class="w3-opacity">
             <p>Published 01/01/2022</p>
