--- a/talk.html
+++ b/talk.html
@@ -76,7 +76,7 @@
 <div class="w3-padding-large" id="main">
   
   <!-- content -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-64">
+  <div class="w3-content w3-justify w3-text-grey">
     <h2 class="w3-text-light-grey">Talk With Others</h2>
 
     <div class="w3-card-4">
