--- a/app/crisis.html
+++ b/app/crisis.html
@@ -10,7 +10,7 @@
 <div class="w3-padding-large" id="main">
   
   <!-- content -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-64">
+  <div class="w3-content w3-justify w3-text-grey">
     <h2 class="w3-text-light-grey w3-center">Call Kids Helpline - 1800 55 1800</h2><br>
     <img src="images/kids-helpline.png" alt="boy" class="w3-image w3-center center-image" width="50%"><br>
     <h2 class="w3-text-light-grey w3-center">In an emergency, call 000</h2><br>
