--- a/information.html
+++ b/information.html
@@ -76,7 +76,7 @@
 <div class="w3-padding-large" id="main">
   
   <!-- content -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-64">
+  <div class="w3-content w3-justify w3-text-grey">
     <h2 class="w3-text-light-grey">Mental Health Guide</h2>
     <div class="w3-row">
       <div class="w3-grey w3-round w3-center w3-col s12 m4 l6 w3-margin-bottom w3-margin-right">
