Fix image for the sidebar my mynd

--- a/articles.html
+++ b/articles.html
@@ -67,7 +67,7 @@
       <p>Experts Near You</p>
     </a>
     <a href="mymynd.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-      <i class="fa fa-meh-o w3-xxlarge"></i>
+      <img src="images/my-mynd-final-logo.png" style="width:100%">
       <p>My Mynd</p>
     </a>
   </nav>
