--- a/mymynd.html
+++ b/mymynd.html
@@ -67,7 +67,7 @@
       <p>Experts Near You</p>
     </a>
     <a href="mymynd.html" class="w3-bar-item w3-button w3-padding-large w3-hover-teal">
-      <i class="fa fa-meh-o w3-xxlarge"></i>
+      <img src="images/my-mynd-final-logo.png" style="width:100%">
       <p>My Mynd</p>
     </a>
   </nav>
@@ -77,7 +77,7 @@
   
   <!-- content -->
   <div class="w3-content w3-justify w3-text-grey">
-      <img src="images/my-mynd-final-logo.png" alt="boy" class="w3-image" width="992" height="1108">
+      <img src="images/mynd-final-logo.png" alt="boy" class="w3-image" width="992" height="1108">
     <div class="w3-content w3-justify w3-text-grey"><br>
         <p><a href="" class="hyper-link">Journal</a></p>
         <p><a href="" class="hyper-link">My Mental Health Plan</a></p>
