--- a/app/mindfulness.html
+++ b/app/mindfulness.html
@@ -10,7 +10,7 @@
 <div class="w3-padding-large" id="main">
   
   <!-- content -->
-  <div class="w3-content w3-justify w3-text-grey">
+  <div class="w3-content w3-justify w3-text-grey w3-padding-64">
     <h2 class="w3-text-light-grey">Mindfulness</h2>
     <hr style="width:200px" class="w3-opacity">
     <p>An anxious brain worries about the future or dwells on the past. And the more often you allow yourself to be anywhere, but the present, the more efficient your anxious brain will become at avoiding the present. Which means it will take an effort to change this habit.</p>
