--- a/app/mymynd.html
+++ b/app/mymynd.html
@@ -10,7 +10,7 @@
 <div class="w3-padding-large" id="main">
   
   <!-- content -->
-  <div class="w3-content w3-justify w3-text-grey">
+  <div class="w3-content w3-justify w3-text-grey w3-padding-64">
       <img src="images/mynd-final-logo.png" alt="boy" class="w3-image" width="992" height="1108">
     <div class="w3-content w3-justify w3-text-grey"><br>
         <p><a href="" class="hyper-link">Journal</a></p>
