--- a/app/articles.html
+++ b/app/articles.html
@@ -11,7 +11,7 @@
   
   <!-- content -->
   <a href="javascript:history.back()">< Back</a>
-  <div class="w3-content w3-justify w3-text-grey">
+  <div class="w3-content w3-justify w3-text-grey w3-padding-64">
     <div class="w3-card-4">
         <header class="w3-container w3-green">
           <h3>#articles</h3>
